# connect-hub

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
connect_hub/: manage.py
connect_hub/clients/: models.py  serializers.py  urls.py  views.py
connect_hub/clients/migrations/: 0001_initial.py  0002_alter_client_groups_alter_client_user_permissions.py  0003_alter_client_options_alter_client_managers_and_more.py  0004_alter_clientconnections_invited_client.py  0005_alter_clientconnections_inviter_client.py  0006_client_user_id.py  0007_alter_client_user_id.py  0008_rename_user_id_client_user.py  0009_alter_client_user.py
connect_hub/connect_hub/: asgi.py  settings.py  urls.py  wsgi.py
